--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "brackets",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "brackets",
+    "version": "0.0.1",
+    "type": "module",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node src/index.js"
+    },
+    "author": "hj5230"
 }
